# recipe-recommender-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  FINDINGS.md  LICENSE  README.md  assignment2.ipynb  assignment2_1.ipynb  cloudbuild.yaml  docker-compose.yml  locustfile.py  pyproject.toml
.github/workflows/: ci.yml  cloud-control.yml  deploy.yml
app/: demo.py  main.py  schemas.py
app/demo_assets/: index.html  rr-app.jsx  rr-components.jsx  rr-data.jsx  rr-tabs.jsx
app/routers/: explain.py  predict.py  recommend.py  similar.py
docs/: architecture.excalidraw  deployment.md  monitoring.md
docs/operations/: cloud-run-dashboard.json  monitoring-evidence.html  monitoring-evidence.md
results/: hybrid_metrics.json  phase3_metrics.json
scripts/: embed_recipes.py  evaluate.py  train.py
src/: data.py  embeddings.py  hybrid.py  metrics.py  models.py  splits.py  vector_store.py
tests/: conftest.py  test_api.py  test_data.py  test_embeddings.py  test_hybrid.py  test_metrics.py  test_models.py  test_splits.py  test_vector_store.py
